Update MATSim CW30 (#106)
* Score explanation functionality

* rename a method from add... to set... since that is what is does.

* changes

* update config group

* update tests and added attributes

* fix un initialized attribute

* small improvement to object creation

* add leg score for individual legs

* more consistent naming

* more consistent naming

* revert unintentional changes

* CreateDrtDashboard

* Bump org.apache.maven.plugins:maven-failsafe-plugin from 3.2.5 to 3.3.0

Bumps [org.apache.maven.plugins:maven-failsafe-plugin](https://github.com/apache/maven-surefire) from 3.2.5 to 3.3.0.
- [Release notes](https://github.com/apache/maven-surefire/releases)
- [Commits](https://github.com/apache/maven-surefire/compare/surefire-3.2.5...surefire-3.3.0)

---
updated-dependencies:
- dependency-name: org.apache.maven.plugins:maven-failsafe-plugin
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>

* rename pooling ratio to occupancy rate

* account for group bookings in DrtAnalysisPostProcessing (and thus DrtDashboard)

* typo in CreateDrtDashboard

* fix wrong sum calculation

* debug NoiseAnalysis and proper testing in NoiseDashboardTests

* fix wrong map selection

* add reduction of numberOfJobs

* add comments and format log massages

* combine

* rename parameter

* reduce code

* format logging

* use method for demand calculating

* use method for shipment creation

* remove todo

* use method to calculate demand based on link lengths

* introduce parameter

* simplify

* cleanup

* Support TransitRouteStops where boarding or alighting is not allowed

In reality, there are trains that call at stops but where it might not be allowed to enter or exit such trains. Examples are night trains, where on the first few stops, only boarding is allowed, while at the last few stops only alighting is al